--- a/index.html
+++ b/index.html
@@ -10,30 +10,29 @@
   
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-sm bg-dark" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Marketing Mundial</a>
+    <nav class="navbar navbar-expand-sm bg-dark sticky-top" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Marketing Mundial</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cadastro</a>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Lista de usuários</a>
-              </li>
-            </ul>
-          </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cadastro</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Lista de usuários</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-
+      </div>
+    </nav>
+  <header>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="True" aria-label="Slide 1"></button>
@@ -78,13 +77,13 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </header>
+  </header>
 
     <main class="container-fluid bg-light"> 
       <!-- PERFIS DO PALESTRANTES -->
       <section class="container mt-3">
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center mb-2">
+          <div class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center text-center mb-2">
             <img src="assets/perfil/perfil1.png" alt="Foto Mauro Silva" class="rounded-circle img-thumbnail w-200">
             <h2 class="fw-normal">Mauro Silva</h2>
             <p>Especialista em Marketing de Mídias Sociais Mauro é um estrategista de mídias sociais experiente, com mais de 10 anos de atuação no mercado</p>
@@ -106,6 +105,50 @@
           </div>
 
         </div>
+      </section>
+
+      <!-- BLOCO DAS INFORMAÇÕES -->
+      <hr class="my-5">
+
+      <section class="container">
+        <section class="row d-flex align-items-center">
+          <div class="col-md-7">
+            <h1>Palestrantes Inspiradores.</h1>
+            <h3>Inscreva-se agora e aprenda com os melhores!</h3>
+            <p class="lead">Descubra as mentes brilhantes que irão transformar sua visão sobre marketing de mídias sociais.</p>
+          </div>
+          <div class="col-md-5">
+            <img src="assets/imagens/bloco1.jpg" alt="" class="w-500 rounded shadow-lg img-fluid">
+          </div>
+        </section>
+
+        <hr class="my-5">
+
+        <section class="row d-flex align-items-center">
+          <div class="col-md-7 order-md-2">
+            <h1>Conhecimentos Estratégicos em Destaque.</h1>
+            <h3>Domine as principais táticas de mídias sociais para impulsionar seu negócio!</h3>
+            <p class="lead"> Descubra as estratégias comprovadas que irão aumentar sua presença online e alcançar o sucesso desejado.
+            </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img src="assets/imagens/bloco2.jpg" alt="" class="w-500 rounded shadow-lg img-fluid">
+          </div>
+        </section>
+
+        <hr class="my-5">
+
+        <section class="row d-flex align-items-center">
+          <div class="col-md-7">
+            <h1>Networking e Oportunidades de Negócios.</h1>
+            <h3>Conecte-se com os líderes da indústria e amplie sua rede de contatos!</h3>
+            <p class="lead">Faça parte de um evento exclusivo que oferece oportunidades únicas para conhecer e interagir com profissionais influentes.</p>
+          </div>
+          <div class="col-md-5">
+            <img src="assets/imagens/bloco3.jpg" alt="" class="w-500 rounded shadow-lg img-fluid">
+          </div>
+        </section>
+
       </section>
     </main>
 
