--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link rel="stylesheet" href="css/estilo.css
     ">
     <title>Evento anual de marketing</title>
@@ -150,8 +153,29 @@
         </section>
 
       </section>
+
+      <hr class="my-5">
+
     </main>
 
+    <footer class="container">
+      <section class="row d-flex">
+
+        <div class="col-md-6">
+          <p>&copy;2023 Marketing Mundial | <a href="#">Privacidade</a> | <a href="#">Políticas</a> </p>
+        </div>
+
+          <!-- Ícones redes sociais -->
+        <div class="col-md-6">
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+
+      </section>   
+    </footer>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
