--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/estilo.css
@@ -158,25 +157,27 @@
 
     </main>
 
-    <footer class="container">
-      <section class="row d-flex">
+    <footer class="container-footer bg-dark text-white py-3">
+      <section class="row">
 
-        <div class="col-md-6">
-          <p>&copy;2023 Marketing Mundial | <a href="#">Privacidade</a> | <a href="#">Políticas</a> </p>
+        <div class="col-md-9">
+          <p>&copy;2023 Marketing Mundial | <a href="#" class="text-decoration-none">Privacidade</a> | <a href="#" class="text-decoration-none">Políticas</a></p>
         </div>
 
+        <div class="col-md-3">
           <!-- Ícones redes sociais -->
-        <div class="col-md-6">
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <div class="fs-5 d-flex justify-content-evenly social" >
+            <a href="#" class="text-white"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#" class="text-white"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" class="text-white"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" class="text-white"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="#" class="text-white"><i class="fa-brands fa-facebook"></i></a>
+          </div>
         </div>
 
       </section>   
     </footer>
 
-    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
