--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cadastro</a>
+              <a class="nav-link" href="pages/cadastro.html">Cadastro</a>
             <li class="nav-item">
               <a class="nav-link" href="#">Lista de usuários</a>
             </li>
