--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -98,13 +98,13 @@
                 </div>
 
                 <div class="form-check">
-                    <input type="radio" id="ensinomedio" name="escolaridade" value="ensinomedio" class="form-check-input">   
-                    <label for="ensinomedio" class="form-check-label">Ensino Médio</label>               
+                    <input type="radio" id="medio" name="escolaridade" value="medio" class="form-check-input">   
+                    <label for="medio" class="form-check-label">Ensino Médio</label>               
                 </div>
 
                 <div class="form-check">
-                    <input type="radio" id="ensinosuperior" name="escolaridade" value="ensinosuperior" class="form-check-input">   
-                    <label for="ensinosuperior" class="form-check-label">Ensino Superior</label>               
+                    <input type="radio" id="superior" name="escolaridade" value="superior" class="form-check-input">   
+                    <label for="superior" class="form-check-label">Ensino Superior</label>               
                 </div>
 
             </section>
