--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -66,7 +66,7 @@
             <section class="row mb-2">
                 <div class="col-md-12">
                     <label for="email" class="mb-2">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" placeholder="email@email.com">
+                    <input type="email" id="email" name="email" class="form-control border-2" placeholder="email@email.com">
                 </div>
             </section>
 
@@ -112,7 +112,7 @@
             </section>
 
             <div class="col-md-6 mx-auto mb-2">
-              <button class="btn btn-primary col-12">Verificar Escolaridade</button>
+              <button class="btn btn-primary col-12" id="btnEscolaridade">Verificar Escolaridade</button>
             </div>
 
             <!-- CAMPO SWITCH: TERMOS DE CONTRATO -->
