--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -95,7 +95,7 @@
 
               <label class="col-form-label-lg">Qual seu nível de escolaridade?</label>
                 <div class="form-check">
-                    <input type="radio" id="fundamental" name="escolaridade" value="fundamental" class="form-check-input">   
+                    <input type="radio" id="fundamental" name="escolaridade" value="fundamental" class="form-check-input" checked>   
                     <label for="fundamental" class="form-check-label">Fundamental</label>               
                 </div>
 
@@ -160,7 +160,7 @@
                 <option value="">Escolhe uma opção...</option>
                 <option value="RH">RH</option>
                 <option value="tecnologia">Tecnologia</option>
-                <option value="fiananceiro">Fiananceiro</option>
+                <option value="financeiro">Financeiro</option>
               </select>
             </section>
             
