--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -169,6 +169,7 @@
               <div class="col-md-12">
                 <label for="mensagem" class="mb-2">Comente sobre o setor escolhido</label>
                 <textarea name="mensagem" id="mensagem" placeholder="Descreva brevemente sua opinião" class="form-control"></textarea>
+                <p class="text-end" id="">Total de caracteres restastes <span id="restante">0</span>/20</p>
               </div>
             </section>
 
