Iniciado Lista de usuários

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="nav-item">
               <a class="nav-link" href="pages/cadastro.html">Cadastro</a>
             <li class="nav-item">
-              <a class="nav-link" href="#">Lista de usuários</a>
+              <a class="nav-link" href="pages/usuarios.html">Lista de usuários</a>
             </li>
           </ul>
         </div>
