--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -29,7 +29,7 @@
             <li class="nav-item">
               <a class="nav-link active" href="#">Cadastro</a>
             <li class="nav-item">
-              <a class="nav-link" href="#">Lista de usuários</a>
+              <a class="nav-link" href="usuarios.html">Lista de usuários</a>
             </li>
           </ul>
         </div>
