--- a/pages/usuarios.html
+++ b/pages/usuarios.html
@@ -47,6 +47,11 @@
               <th>Telefone</th>
             </tr>
           </thead>
+
+          <tbody id="tabela">
+    
+          </tbody>
+
         </table>
     </main>
 
@@ -72,6 +77,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="../js/api.js"></script>
 </body>
 </html>
